# shallweswim

./: .cursorrules  .dockerignore  .env.example  .geminiignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc  .windsurfrules  AGENTS.md  AI_CODER_RULES.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  NEW_DATA_FEED.md  NEW_LOCATION.md  README.md  TODO.md  biome.json  build_and_deploy.sh  cloudbuild.yaml  data.py  generate_static_plots.py  inconsistency_report.md  main.py  pyproject.toml  requirements.txt  rumdl.toml  service.yaml
.claude/: settings.json
.cline/: room.md
.codex/skills/owner-review/: SKILL.md
.gemini/: context.md
.github/workflows/: black.yml  browser-smoke.yml  browser-tests.yml  code-quality.yml  frontend.yml  integration-tests.yml  mypy.yml  performance-tests.yml  pylint.yml  pytest.yml  pytype.yml  ruff.yml  typecheck.yml
docs/: CONVENTIONS.md
frontend/: DESIGN.md  index.html  openapi.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: main.tsx
frontend/src/api/: bootstrap.ts  client.ts  conditions.ts  currents.ts  generated.ts  transit.test.ts  transit.ts
frontend/src/components/: AppShell.tsx  PageMessage.tsx
frontend/src/hooks/: useDeferredImage.ts  usePageTitle.ts
frontend/src/lib/: format.test.ts  format.ts  pageTitle.ts  preferences.test.ts  preferences.ts  temperature.ts
frontend/src/pages/: CurrentsPlaceholderPage.tsx  LocationPage.tsx  LocationPlaceholderPage.tsx  LocationsPage.tsx  LocationsPlaceholderPage.tsx  NotFoundPage.tsx
frontend/src/routes/: App.test.tsx  App.tsx
frontend/src/styles/: app.css
frontend/src/test/: setup.ts
frontend/tests/e2e/: app-shell.spec.ts
shallweswim/: api.py  api_types.py  assets.py  canonical.py  compression.py  config.py  coops.py  coops_types.py  data.py  dataframe_models.py  feeds.py  generate_static_plots.py  harmonic_tides.py  logging_utils.py  main.py  ndbc.py  noaa.py  noaa_types.py  nwis.py  plot.py  types.py  util.py
shallweswim/api/: __init__.py  routes.py
shallweswim/clients/: __init__.py  base.py  coops.py  cspf.py  irish_lights.py  marine_institute.py  ndbc.py  nwis.py
shallweswim/config/: __init__.py  locations.py
shallweswim/core/: __init__.py  feeds.py  manager.py  queries.py  updater.py
shallweswim/data/tides/: dov_harmonics.json
shallweswim/scripts/: README.md  __init__.py  debug_cspf_fetch.py  debug_irish_lights_fetch.py  debug_ndbc_fetch.py  debug_nwis_fetch.py  derive_harmonic_tide_model.py  export_openapi.py  generate_asset_manifest.py  generate_static_plots.py  harmonic_tides.py  inspect_historic_temp_plot_artifacts.py
shallweswim/static/: claude_app_structure.html  claude_display_options.html  codex_app_integration_options.html  codex_display_options.html  debug.js  gemini_display_options.html  gemini_location_wireframe.html  main.js  manifest.json  style.css
shallweswim/templates/: all_locations.html  app_shell_head.html  app_shell_noscript.html  base.html  current.html  embed.html  index.html  macros.html  widget.html  widget_macro.html
static/: site.webmanifest
templates/: current.html  embed.html  index.html
tests/: conftest.py  helpers.py  test_api.py  test_api_error_handling.py  test_api_integration.py  test_backend_error_handling.py  test_canonical.py  test_clients_base.py  test_config.py  test_coops.py  test_coops_integration.py  test_cspf.py  test_cspf_integration.py  test_data.py  test_derive_harmonic_tide_model.py  test_feeds.py  test_frontend_browser.py  test_inspect_historic_temp_plot_artifacts.py  test_irish_lights.py  test_irish_lights_integration.py  test_main_routes.py  test_marine_institute.py  test_marine_institute_integration.py  test_mocked_stack.py  test_ndbc.py  test_ndbc_integration.py  test_noaa.py  test_noaa_integration.py  test_nwis.py  test_nwis_integration.py  test_plot.py  test_react_stack_browser.py  test_tooling_config.py  test_util.py
tests/performance/: test_request_latency.py
