[project]
name = "shallweswim"
version = "0.1.0"
description = "Website to display swimming conditions at Coney Island / Brighton Beach"
authors = [{name = "Jeremy Whelchel", email = "jeremy@whelchel.me"}]
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "google-cloud-logging>=3,<4",
    "numpy>=2,<3",
    "pandas>=2,<3",
    "seaborn>=0.13,<1",
    "scipy>=1,<2",
    "pydantic>=2.9,<3",
    "uvicorn>=0.38.0,<1",
    "fastapi>=0.120.1,<1",
    "jinja2>=3.1,<4",
    "aiohttp>=3.9.3,<4",
    "ndbc-api>=0.25.10.28.1,<1",
    "dataretrieval>=1.1.1,<2",
    "tenacity>=9.1.2,<10",
    "pandera[pandas]>=0.26.1,<1",
    "starlette>=0.49.1,<1",
]

[project.optional-dependencies]
dev = [
    "black>=25,<27",
    "pytest>=8,<9",
    "pytest-asyncio>=1.2.0,<2",
    "pre-commit>=4,<5",
    "mypy>=1.15.0,<2",
    "types-pytz",
    "matplotlib-stubs>=0.3.11,<1",
    "httpx>=0.28.1,<1",
    "pylint>=4.0.2,<5",
    "types-python-dateutil",
    "pytest-cov>=7.0.0,<8",
    "pytest-aiohttp>=1.1.0,<2",
    "types-requests",
    "freezegun>=1.5.1,<2",
    "pytest-mock>=3.14.0,<4",
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pylint.master]
jobs = 4
ignore = "CVS"
persistent = true

[tool.pylint.messages_control]
# Only check for specific errors/warnings
# Focus on the most important issues like unused imports and dead code
enable = [
    "W0611", # unused-import
    "W0612", # unused-variable
    "W0613", # unused-argument
    "W0614", # unused-wildcard-import
    "W0641", # possibly-unused-variable
    "E0704", # misplaced-bare-raise
    "C0415", # import-outside-toplevel
    "R0801", # duplicate-code
]

# Disable all checks except those explicitly enabled above
disable = "all"

[tool.pylint.reports]
output-format = "colorized"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "module"

[tool.basedpyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
