[project]
name = "shallweswim"
version = "0.1.0"
description = "Website to display swimming conditions at Coney Island / Brighton Beach"
authors = [{name = "Jeremy Whelchel", email = "jeremy@whelchel.me"}]
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "google-cloud-logging>=3,<4",
    "numpy>=2,<3",
    "pandas>=2,<3",
    "seaborn>=0.13,<1",
    "scipy>=1,<2",
    "pydantic>=2.9,<3",
    "uvicorn>=0.38.0,<1",
    "fastapi>=0.120.1,<1",
    "jinja2>=3.1,<4",
    "aiohttp>=3.13.3,<4",
    "ndbc-api>=0.25.10.28.1,<1",
    "dataretrieval>=1.1.1,<2",
    "tenacity>=9.1.2,<10",
    "pandera[pandas]>=0.26.1,<1",
    "starlette>=0.49.1,<1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9,<1",
    "basedpyright>=1.29,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=1.2.0,<2",
    "pre-commit>=4,<5",
    "types-pytz",
    "matplotlib-stubs>=0.3.11,<1",
    "httpx>=0.28.1,<1",
    "types-python-dateutil",
    "pytest-cov>=7.0.0,<8",
    "pytest-aiohttp>=1.1.0,<2",
    "types-requests",
    "freezegun>=1.5.1,<2",
    "pytest-mock>=3.14.0,<4",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",      # Pyflakes (unused imports, variables)
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (formatter handles code; comments/docstrings are ok)
]

[tool.ruff.format]
# Black-compatible defaults

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "module"

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
# Pandas stubs have incomplete type definitions - report as warnings for now
reportInvalidTypeArguments = "warning"
reportAttributeAccessIssue = "warning"
reportCallIssue = "warning"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
