[project]
name = "shallweswim"
version = "0.1.0"
description = "Website to display swimming conditions at Coney Island / Brighton Beach"
authors = [{name = "Jeremy Whelchel", email = "jeremy@whelchel.me"}]
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "google-cloud-logging>=3,<4",
    "numpy>=2,<3",
    "pandas>=2,<3",
    "seaborn>=0.13,<1",
    "scipy>=1,<2",
    "pydantic>=2.9,<3",
    "uvicorn>=0.38.0,<1",
    "fastapi>=0.120.1,<1",
    "jinja2>=3.1,<4",
    "aiohttp>=3.13.3,<4",
    "ndbc-api>=0.25.10.28.1,<1",
    "dataretrieval>=1.1.1,<2",
    "tenacity>=9.1.2,<10",
    "pandera[pandas]>=0.26.1,<1",
    "starlette>=0.49.1,<2",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.1,<2",
    "httpx>=0.28.1,<1",
    "matplotlib-stubs>=0.3.11,<1",
    "pre-commit>=4,<5",
    "pyrefly>=0.53,<1",
    "pytest>=9.0.3,<10",
    "pytest-aiohttp>=1.1.0,<2",
    "pytest-asyncio>=1.2.0,<2",
    "pytest-cov>=7.0.0,<8",
    "pytest-mock>=3.14.0,<4",
    "pytest-rerunfailures>=16,<17",
    "pytest-timeout>=2.3.1,<3",
    "rumdl",
    "ruff>=0.9,<1",
    "types-python-dateutil",
    "types-pytz",
    "types-requests",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",      # Pyflakes (unused imports, variables)
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify (simplify code patterns)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (formatter handles code; comments/docstrings are ok)
    "SIM105", # contextlib.suppress - explicit try/except with comments is clearer
    "SIM117", # nested with - combining makes lines too long
]

[tool.ruff.format]
# Black-compatible defaults

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "module"
timeout = 60
timeout_method = "thread"
filterwarnings = [
    "error",
    # ndbc_api uses deprecated pandas syntax (parse_dates, delim_whitespace)
    "ignore::FutureWarning:ndbc_api",
    # TODO: migrate to dataretrieval.waterdata module when ready
    "ignore:The 'nwis' services are deprecated:DeprecationWarning:dataretrieval",
]

[tool.pyrefly]
# Python version
python-version = "3.13"

# Virtual environment
python-interpreter-path = ".venv/bin/python3"

# Pandas stubs have incomplete type definitions - downgrade to warnings
# Equivalent to basedpyright's reportInvalidTypeArguments, reportAttributeAccessIssue, reportCallIssue
[tool.pyrefly.errors]
bad-specialization = "warn"          # Type argument issues (pandas generic types)
missing-attribute = "warn"           # Attribute access issues (pandas DataFrame attrs)
bad-argument-type = "warn"           # Call issues (pandas method signatures)
bad-argument-count = "warn"          # Call issues (pandas method signatures)
no-matching-overload = "warn"        # Call issues (pandas overloaded methods)
bad-index = "warn"                   # DataFrame/Series indexing issues (pandas .loc/.iloc)
missing-module-attribute = "warn"    # Import issues (scipy.signal.find_peaks stubs)
unsupported-operation = "warn"       # Unsupported operations (pandas Categorical/ExtensionArray)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
